syntax = "proto3";

package review;

service ReviewService {
    rpc CreateReview(ReviewRequest) returns (Review);
    rpc GetReviews(ReviewPostId) returns (Reviews);
    rpc DeletePostsReviews(ReviewPostId) returns (Empty);
    // rpc PostReviews(ReviewPostId) returns (Reviews);
    rpc DeleteReview(ReviewId) returns (Empty);
    rpc GetReview(ReviewId) returns (Review);
    rpc DeleteReviewByCustomerId(CustomerId) returns (Empty);
}


message Empty {
}

message CustomerId {
    int32 CustomerId = 1;
}

message Reviews {
    repeated Review reviews = 1;
}
message ReviewId {
    int32 id = 1;
}

message Review {
    int32 id = 1;
    string name = 2;
    int32 review = 3;
    string description = 4;
    int32 post_id = 5;
    int32 customer_id = 6;
}

message ReviewPostId {
    int32 post_id = 1;
}

message ReviewRequest {
    string name = 1;
    int32 review = 2;
    string description = 3;
    int32 post_id = 4;
    int32 customer_id = 5;
}