syntax = "proto3";

package post;

service PostService {
    rpc CreatePost(PostRequest) returns(Post);
    rpc GetPostWithCustomerInfo(Id) returns (PostWithCustomerInfo);
    rpc GetPostsOfCustomer(Id) returns (Posts);
    rpc UpdatePost(Post) returns (Post);
    rpc DoesPostExist(Id) returns (Exist);
    rpc DeletePost(Id) returns (IsDeleted);
    rpc GetAllPostsWithCustomer(Empty) returns (AllPosts);
}


message Empty {
}
message IsDeleted {
    bool post_deleted = 1;
}

message Exist{
    bool exists = 1;
}

message Id {
    int32 id = 1;
}

message Cust_Id {
    int32 customer_id = 1;
}
message PostRequest {
    string name = 1;
    string description = 2;
    int32 customer_id = 3;
    repeated Media medias = 4;
}
message Post {
    int32 id = 1;
    string name = 2;
    string description = 3;
    int32 customer_id = 4;
    repeated Media medias = 5;
    repeated Review reviews = 6;
}
message PostWithCustomerInfo {
    int32 id = 1;
    string name = 2;
    string description = 3;
    int32 customer_id = 4;
    repeated Media medias = 5;
    repeated Review reviews = 6;
    Customer customer = 7;
}
message Customer {
    int32 id = 1;
    string first_name = 2;
    string last_name = 3;
    string bio = 4;
    string email = 5;
    string phone_number = 6;
    repeated Address addresses = 7;
}

message Media {
    int32 id = 1;
    string name = 2;
    string link = 3;
    string type = 4;
}

message Address {
    int32 id = 1;
    string street = 2;
    int32 house_number = 3;
}

message Review {
    int32 id = 1;
    string name = 2;
    int32 review = 3;
    string description = 4;
    int32 post_id = 5;
    int32 customer_id = 6;
}
message PostWithOnlyCustomerInfo {
    int32 id = 1;
    string name = 2;
    string description = 3;
    int32 customer_id = 4;
    repeated Media medias = 5;
    Customer customer = 7;
}

message AllPosts {
    repeated PostWithOnlyCustomerInfo posts = 1;
}

message Posts {
    repeated Post posts = 1;
}